# data-contract-creator

./: CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  README.md  Trunk.toml  index.html  index.scss
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: deploy.yml
openai/: Cargo.toml  README.md  index.html  index.scss
openai/src/: main.rs
original/: README.md  index.html
src/: lib.rs  main.rs  main_original.rs
src/components/: app.rs  app_view_impl.rs  mod.rs  test_app.rs
src/services/: json_generator.rs  json_parser.rs  mod.rs  openai.rs  validation.rs  validation_test.rs
src/styles/: _variables.scss
src/types/: document_type.rs  index.rs  mod.rs  property.rs  validation.rs
src/utils/: constants.rs  mod.rs
