[package]
name = "data-contract-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
yew = {version="0.20.0", features = ["csr"]}
serde = "1.0.164"
serde_json = {version = "1.0.117", features = ["preserve_order"]}
web-sys = {version="0.3.63", features = ["HtmlSelectElement"]}
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.37"
anyhow = "1.0.71"
dpp = { git = "https://github.com/dashpay/platform.git", rev = "c03a5f81d4f8c059e541d5d3202bc9fb438a7422", default-features = false, features = ["cbor", "factories", "validation"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "datacontractcreator"
path = "src/main.rs"
