[package]
name = "data-contract-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlTextAreaElement", "Window", "Document", "Element"] }
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = "1.0"
log = "0.4"
dpp = { git = "https://github.com/dashpay/platform.git", rev = "40e2869e1667bbbf1acfb32a049dcb2ad76c4b2f", default-features = false, features = ["cbor", "factories", "validation"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "datacontractcreator"
path = "src/lib.rs"

[[bin]]
name = "data-contract-creator"
path = "src/main.rs"
