[package]
name = "ai-contract-creator"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version="0.20.0", features = ["csr"]}
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"
web-sys = { version="0.3.64", features=["Clipboard", "Navigator"] }
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.37"
anyhow = "1.0.71"
dpp = { git="https://github.com/pauldelucia/platform.git", package="dpp", default-features = false, features = ["cbor"] }